--- a/src/index.html
+++ b/src/index.html
@@ -12,29 +12,25 @@
     />
     <link rel="stylesheet" href="https://fontawesome.com/" />
   </head>
-  <body>
-    <div class="container-fluid bg-success">
+  <body class="bg-success">
+    <div class="container">
       <div class="row">
         <div
           class="carta col-4 bg-white mx-auto mt-5 mb-5 position-relative rounded"
           id="carta"
         >
           <div
-            class="position-absolute top-0 start-0 pt-3 ps-3 fs-1"
+            class="position-absolute top-0 start-0 pt-2 ps-3 fs-1"
             id="icono"
-          >
-            icono1
-          </div>
+          ></div>
           <div
-            class="numeros position-absolute top-50 start-50 translate-middle"
+            class="numeros position-absolute top-50 start-50 translate-middle mx-auto"
             id="numeros"
           ></div>
           <div
-            class="position-absolute bottom-0 end-0 pb-3 pe-3 fs-1"
+            class="position-absolute bottom-0 end-0 pb-3 ps-3 fs-1"
             id="icono2"
-          >
-            icono2
-          </div>
+          ></div>
         </div>
       </div>
     </div>
